[package]
name = "geotag"
version = "0.1.0"
authors = ["Hubert Figuière <hub@figuiere.net>"]

[dependencies]
docopt = "^1.0.0"
exempi = { version = "2.5.0", git = "https://github.com/hfiguiere/exempi-rs.git", rev = "065721c4" }
gpx = "0.6.0"
serde = "1.0.15"
serde_derive = "1.0"  # if you're using `derive(Deserialize)`


[lib]
name = "geotag"

[[bin]]
name = "geotag"
